test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/2_modifier/storage/static/INVALID_NONSTATIC_CALL.t
class QWE
{
    function g():void {}

    static function f():void
    {
        @static_test { expect_message={ level="LEVEL_ERROR", id="INVALID_NONSTATIC_CALL", parameters={ func="g" } } }
        g();
    }
}
